feats:"Acrescentando a autenticacao do usuario (é para dar certo, confia)"
